Element icon legibility: up the base saturation + move brightness fix to variable

--- a/src/app/_theme-neomuna.scss
+++ b/src/app/_theme-neomuna.scss
@@ -75,6 +75,7 @@
   --theme-item-polaroid-capped-txt: #000;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
+  --theme-item-polaroid-element-adjust-brightness: 125%; // Adjust brightness level of Arc, Strand, Void icons
 
   // Item popup
   --theme-item-popup-border: #333;
