--- a/src/app/_theme-pyramid.scss
+++ b/src/app/_theme-pyramid.scss
@@ -73,6 +73,7 @@
   --theme-item-polaroid-capped-txt: #fff;
   --theme-item-polaroid-godroll: #fff;
   --theme-item-polaroid-trashroll: #d14334;
+  --theme-item-polaroid-element-adjust-brightness: 85%; // Adjust brightness level of Arc, Strand, Void icons
 
   // Item popup
   --theme-item-popup-border: #333;
