--- a/src/app/_theme-vexnet.scss
+++ b/src/app/_theme-vexnet.scss
@@ -73,6 +73,7 @@
   --theme-item-polaroid-capped-txt: #e54127;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
+  --theme-item-polaroid-element-adjust-brightness: 120%; // Adjust brightness level of Arc, Strand, Void icons
 
   // Item popup
   --theme-item-popup-border: #333;
